--- a/smurfs/package.json
+++ b/smurfs/package.json
@@ -11,7 +11,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "styled-reset": "^2.0.16"
   },
   "scripts": {
     "start": "react-scripts start",
